注册登录整合

--- a/src/main/resources/static/checkinfo.html
+++ b/src/main/resources/static/checkinfo.html
@@ -101,7 +101,7 @@
     </div>
     <div id="go_continue">
         <button id="btn">
-            <a id="abtn" >回首页</a>
+            <a id="abtn" href="index.html" >回首页</a>
         </button>
 
     </div>
