--- a/src/main/resources/static/Cart.html
+++ b/src/main/resources/static/Cart.html
@@ -23,14 +23,11 @@
 <div id="menu">
     <div id="menu_content">
         <ul id="m_left">
-            <li id="ttbar-home">
-                <i class="iconfont"></i>
-                <a href="//www.jd.com/" target="_blank">京东首页</a></li>
             <li class="iconfont red font14"></li>
             <li>厦门</li>
         </ul>
         <ul id="m_right">
-            <li id="m_right_first">你好，请登录 &nbsp;<span class="red">免..</span></li>
+<!--            <li id="m_right_first">你好，请登录 &nbsp;<span class="red">免..</span></li>-->
             <li class="spacer"></li>
             <li class="dt"><a>我的订单</a></li>
             <li class="spacer"></li>
@@ -141,7 +138,7 @@
                 <div class="info">
                     <a href="#" class="shop-img">
                         <img :alt="produce.picwords"
-                             :src="produce.picurl">
+                             :src="produce.picurl" width="80px">
                     </a>
                     <div class="p-name">
                         <a href="#"></a>
@@ -411,7 +408,7 @@
 <script src="js/vue.js"></script>
 <script src="js/jquery.cookie.js"></script>
 <script>
-    var state = false;
+    var state = false,deleteP = -1;
     var vm = new Vue({
         el: ".shop-list",
         data: {
@@ -419,35 +416,32 @@
         },
 
         methods: {
-            AllPrice: function (i) {
-                return this.products[i].prices * this.products[i].count;
+            AllPrice: function (index) {
+                return this.products[index].prices * this.products[index].count;
             },
-            // addnew:function () {
-            //     var i = Math.floor(Math.random()*4);
-            //     //判断是否重复
-            //     var flag = -1;
-            //     for(var j = 0;j < this.products.length;j++){
-            //         if(this.products[j].name == pro[i]){
-            //             flag=j;
-            //             break;
-            //         }
-            //     }
-            //     if(flag == -1)
-            //         this.products.push({name:pro[i],price:price[i],num:1});
-            //     else
-            //         this.products[flag].num++;
-            //
-            // },
             deletePerson: function (index) {
                 //删一个数组元素
                 this.products.splice(index, 1);
-                deleteP = index + 1;
+                 deleteP = parseInt(this.products[index].cartId)-1;
                 $(".cart-main").css("height", "-=108");
-                if(this.products.length == 0)
-                    $(".cart-empty").css("display","block");
-                    $(".cart-bar").css("display","none");
-                    $(".cart-main").css("display","none");
-                    $(".cart-box").css("display","none");
+                $.ajax({
+                    url: "http://localhost:8080/cart/delete",
+                    type: "post",
+                    datatype: "json",
+                    data: {"cartId": deleteP},
+                    success: function (data) {
+                        if (data != null) {
+                            alert("从购物车移除成功~");
+                            location.reload();
+                        } else
+                            alert("Error");
+                    }
+                })
+                if (this.products.length == 0)
+                    $(".cart-empty").css("display", "block");
+                $(".cart-bar").css("display", "none");
+                $(".cart-main").css("display", "none");
+                $(".cart-box").css("display", "none");
             },
             decOne: function (index) {
                 var decP = index + 1;
@@ -456,14 +450,26 @@
                         url: "http://localhost:8080/cart/decreOne",
                         method: 'post',
                         //发送格式为json
-                        data: {"cartId": decP},
+                        data: {"cartId": this.products[index].cartId},
                         success: function () {
                             decP = -1;
                         }
                     })
-                } else if (confirm("是否将该商品移除购物车？"))
-                    this.products.splice(index, 1);
-                deleteP = index + 1;
+                } else if (confirm("是否将该商品移除购物车？")){
+                    $.ajax({
+                        url: "http://localhost:8080/cart/delete",
+                        type: "post",
+                        datatype: "json",
+                        data: {"cartId": this.products[index].cartId},
+                        success: function (data) {
+                            if (data != null) {
+                                alert("从购物车移除成功~");
+                                location.reload();
+                            } else
+                                alert("Error");
+                        }
+                    })
+                }
             },
             addOne: function (index) {
                 var addP = index + 1;
@@ -471,7 +477,7 @@
                     url: "http://localhost:8080/cart/increOne",
                     method: 'post',
                     //发送格式为json
-                    data: {"cartId": addP},
+                    data: {"cartId": this.products[index].cartId},
                     success: function () {
                         addP = -1;
                     }
@@ -482,11 +488,11 @@
                     if ($(".checkbox").eq(index).prop('checked')) {
                         var sum = parseFloat($('em[name="sumPrice"]').text()) + parseFloat($(".p-sum strong").eq(index).text());
                         $('em[name="sumPrice"]').html(sum + "￥");
-                        $(".amount-sum-txt strong").text(parseFloat($(".amount-sum-txt strong").text())+1);
+                        $(".amount-sum-txt strong").text(parseFloat($(".amount-sum-txt strong").text()) + 1);
                     } else {
                         var sum = parseFloat($('em[name="sumPrice"]').text()) - parseFloat($(".p-sum strong").eq(index).text());
                         $('em[name="sumPrice"]').html(sum + "￥");
-                        $(".amount-sum-txt strong").text(parseFloat($(".amount-sum-txt strong").text())-1);
+                        $(".amount-sum-txt strong").text(parseFloat($(".amount-sum-txt strong").text()) - 1);
                     }
                 }
 
@@ -498,7 +504,7 @@
 
         //cookie
         var accId = $.cookie('accId');
-        if(accId === undefined){
+        if (accId === undefined) {
             location.href = "login.html";
         }
         //展示购物车
@@ -534,7 +540,7 @@
             url: "http://localhost:8080/cart/getSumMoney",
             type: "post",
             datatype: "json",
-            data: {"usersId": accId},
+            data: {"usersId": parseInt(accId)},
             success: function (data) {
                 var sum = 0;
                 for (var i = 0; i < data.length; i++) {
@@ -550,92 +556,86 @@
             url: "http://localhost:8080/cart/getAddress",
             type: "post",
             datatype: "json",
-            data: {"usersId": accId},
+            data: {"usersId": parseInt(accId)},
             success: function (data) {
                 $(".option-addresss input").val(data);
             }
         });
 
-        //点击删除，从Cart中删除数据
-        var target = document.querySelector('.shop-list')
-        var eye2 = 0;
-        // 设定监听回调函数
-        var observer = new MutationObserver(function (mutations) {
-            //点击删除，同时移除购物车数据
-            if ($('.shop-list').children.length) {
-                eye2++;
-                if (eye2 > 1) {
-                    $.ajax({
-                        url: "http://localhost:8080/cart/delete",
-                        type: "post",
-                        datatype: "json",
-                        data: {"cartId": deleteP},
-                        success: function (data) {
-                            if (data != null) {
-                                alert("从购物车移除成功~");
-                            } else
-                                alert("Error");
-                        }
-                    })
-                }
-            }
-        });
-        observer.observe(target, {
-            childList: true,
-            attributes: true
-        });
 
         //清空购物车
         //手动输入用户ID进行模拟
+        //现已更新为cookie传递accId，需要强转为Integer
         $("#clearAll").click(function () {
             $.ajax({
                 url: "http://localhost:8080/cart/clearAll",
                 type: "post",
                 datatype: "json",
-                data: {"usersId": accId},
+                data: {"usersId": parseInt(accId)},
                 success: function (data) {
                     alert("清空购物车成功~");
                 }
             });
         })
 
+//点击结算生成订单
+        // var orderData = {"Insert": [{"orderId": 1, "usersId": parseInt(accId), "orderAddress": "lundon", "orderPrice": 2550}]};
+        $(".price-tips").click(function () {
+            var price = parseFloat($('em[name="sumPrice"]').html());
+            $.ajax({
+                url: "http://localhost:8080/cart/getOrder",
+                type: "post",
+                datatype: "json",
+                // data:JSON.stringify(orderData),
+                //点击“去结算后”，根据用户ID生成订单，暂且手动输入1进行模拟
+                data: {"usersId": parseInt(accId), "orderPrice": price},
+                success: function (data) {
+                    if($(".amount-sum-txt strong").text() != "0")
+                        if (data != null)
+                            alert("订单提交成功~");
+                        else
+                            alert("订单提交失败！");
+                    else
+                        alert("您还未选择任何商品~");
+                }
+            });
+        })
+
+
+
+        //点击搜索跳到搜索页面
+        $('input[value="搜索"]').click(function () {
+            location.href = "search.html";
+        })
+
+        $(".button").click(function () {
+            sessionStorage.setItem("keyWord",$(".text").val());
+            window.location.href="search.html";
+        });
+
+        //点击登录跳到登录页面
+        $('#m_right_first').click(function () {
+            location.href = "login.html";
+        })
+
     });//$function结尾
 
-    //点击结算生成订单
-    var orderData = {"Insert": [{"orderId": 1, "usersId": accId, "orderAddress": "lundon", "orderPrice": 2550}]};
-    $(".price-tips").click(function () {
-        var price = parseFloat($('em[name="sumPrice"]').html());
-        $.ajax({
-            url: "http://localhost:8080/cart/getOrder",
-            type: "post",
-            datatype: "json",
-            // data:JSON.stringify(orderData),
-            //点击“去结算后”，根据用户ID生成订单，暂且手动输入1进行模拟
-            data: {"usersId": accId, "orderPrice": price},
-            success: function (data) {
-                if (data != null)
-                    alert("订单提交成功~");
-                else
-                    alert("Error");
-            }
-        });
-    })
 
     //勾选复选框
     function checkboxSum() {
         var pre = 0;
         if ($(".jdcheckbox").prop('checked')) {
-            for(var i = 0;i<vm.products.length;i++){
-                    pre+=parseFloat($(".p-sum strong").eq(i).text());
+            for (var i = 0; i < vm.products.length; i++) {
+                pre += parseFloat($(".p-sum strong").eq(i).text());
             }
             // $('em[name="sumPrice"]').html(0 + "￥");
             $('em[name="sumPrice"]').html(pre + "￥");
             $(".amount-sum-txt strong").text(vm.products.length);
         } else {
             var sum = 0;
-            for(var i = 0;i<vm.products.length;i++){
-                if ($(".checkbox").eq(i).attr('checked')) {
-                    pre+=parseFloat($(".p-sum strong").eq(i).text());
+            for (var i = 0; i < vm.products.length; i++) {
+                if ($(".checkbox").eq(i).prop('checked')) {
+                    pre += parseFloat($(".p-sum strong").eq(i).text());
                     sum++;
                 }
             }
@@ -643,16 +643,6 @@
             $(".amount-sum-txt strong").text(sum);
         }
     }
-
-    //点击搜索跳到搜索页面
-    $('input[value="搜索"]').click(function () {
-        location.href = "";
-    })
-
-    //点击登录跳到登录页面
-    $('#m_right_first').click(function () {
-        location.href = "";
-    })
 
     if (!$(".shop-info")) {
         $(".cart-empty").css("display", "block");
