--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -119,7 +119,7 @@
         <div id="search">
             <div class="form">
                 <input type="text" id="key">
-                <button id="button"><i class="iconfont"></i></button>
+                <button id="button"><i class="iconfont" style="color: white"></i></button>
             </div>
             <div class="cw-icon">
                 <i class="iconfont"></i>
