--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -6,7 +6,7 @@
     <link href="css/jd-order.css" rel="stylesheet">
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/jquery.cookie.js"></script>
-    <script src="js/vue.min.js"></script>
+    <script src="js/search/vue.min.js"></script>
     <script>
         $(function () {
 
@@ -283,9 +283,6 @@
                     <li><i class="iconfont"></i>
                         福建
                     </li>
-                    <li><i class="iconfont"></i>
-                        <a>京东首页</a>
-                    </li>
                 </ul>
             </div>
             <div id="menu_div">
@@ -304,8 +301,8 @@
                     <li class="spacer"></li>
                     <li class="menuli"><a>我的订单</a></li>
                     <li class="spacer"></li>
-                    <li class="menuli"><a href="login.html">你好，请登录</a>
-                        <a class="red">免费注册</a></li>
+<!--                    <li class="menuli"><a href="login.html">你好，请登录</a>-->
+<!--                        <a class="red">免费注册</a></li>-->
                 </ul>
             </div>
 
