--- a/src/main/resources/static/RetrieveUser.html
+++ b/src/main/resources/static/RetrieveUser.html
@@ -12,7 +12,7 @@
 <body>
 <div class="iframe" id="myView">
     <ul class="breadcrumb">
-        <li><a href="后台管理.html">首页</a></li>
+        <li><a href="backstage.html">首页</a></li>
         <li><a href="#">用户管理</a></li>
         <li><a href="#">查询用户</a></li>
     </ul>
@@ -55,7 +55,7 @@
 </div>
 </body>
 </html>
-<script src="js/vue.js"></script>
+<script src="js/search/vue.js"></script>
 <script>
     var vm = new Vue({
         el: "#myView",
