--- a/src/main/resources/static/backstageSelectClass.html
+++ b/src/main/resources/static/backstageSelectClass.html
@@ -7,7 +7,7 @@
     <link href="css/backstage.css" rel="stylesheet">
     <script src="js/jquery-1.12.4.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="js/vue.min.js"></script>
+    <script src="js/search/vue.min.js"></script>
     <script>
         $(function () {
 
